# snk.fork.ogles_gpgpu

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: Config.cmake.in  HunterGate.cmake
cmake/Hunter/: config.cmake
cmake/modules/: CommonFindMod.cmake  FindAndroid.cmake  FindEGL.cmake  FindLog.cmake  FindOpenGLES2.cmake
examples/: CMakeLists.txt
examples/android/: .gitignore
examples/ios/OGLESGPGPUStillImage/OGLESGPGPUStillImage/: AppDelegate.h
examples/ios/OGLESGPGPUVideoCam/OGLESGPGPUVideoCam/: AppDelegate.h  CMakeLists.txt  CamView.h  RootViewController.h  storyboard.plist.in
ogles_gpgpu/: CMakeLists.txt  sugar.cmake
ogles_gpgpu/common/: common_includes.h  core.cpp  core.h  macros.h  sugar.cmake  tools.cpp  tools.h  types.cpp  types.h
ogles_gpgpu/common/gl/: fbo.cpp  fbo.h  memtransfer.cpp  memtransfer.h  memtransfer_factory.cpp  memtransfer_factory.h  memtransfer_optimized.h  pbo.cpp  pbo.h  shader.cpp  shader.h  sugar.cmake
ogles_gpgpu/common/proc/: adapt_thresh.h  blend.cpp  blend.h  box_opt.h  diff.cpp  diff.h  disp.cpp  disp.h  fifo.cpp  fifo.h  filter3x3.cpp  filter3x3.h  fir3.cpp  fir3.h  flow.cpp  flow.h  gain.cpp  gain.h  gauss.h  gauss_opt.h  grad.cpp  grad.h  grayscale.cpp  grayscale.h  harris.cpp  harris.h  hessian.cpp  hessian.h  highpass.h  hsv2rgb.cpp  hsv2rgb.h  iir.cpp  iir.h  ixyt.cpp  ixyt.h  lbp.cpp  lbp.h  letterbox.cpp  letterbox.h  lnorm.h  (+32 more)
ogles_gpgpu/common/proc/base/: filterprocbase.cpp  filterprocbase.h  multipassproc.cpp  multipassproc.h  multiprocinterface.cpp  multiprocinterface.h  procbase.cpp  procbase.h  procinterface.cpp  procinterface.h  sugar.cmake
ogles_gpgpu/common/proc/multipass/: adapt_thresh_pass.cpp  adapt_thresh_pass.h  box_opt_pass.cpp  box_opt_pass.h  gauss_opt_pass.cpp  gauss_opt_pass.h  gauss_pass.cpp  gauss_pass.h  local_norm_pass.cpp  local_norm_pass.h  sugar.cmake
ogles_gpgpu/platform/: sugar.cmake
ogles_gpgpu/platform/android/: egl.cpp  egl.h  fake_dlfcn.c  gl_includes.h  macros.h  memtransfer_android.cpp  memtransfer_android.h  sugar.cmake
ogles_gpgpu/platform/ios/: core.mm  gl_includes.h  memtransfer_ios.cpp  memtransfer_ios.h  sugar.cmake
ogles_gpgpu/platform/opengl/: gl_includes.h  sugar.cmake
ogles_gpgpu/platform/osx/: gl_includes.h  memtransfer_osx.cpp  memtransfer_osx.h  sugar.cmake
ogles_gpgpu/ut/: CMakeLists.txt  test-ogles_gpgpu.cpp
